Dec 13, 2013: libphonenumber-5.9.1
* Metadata changes:
 - New alternate formatting data for country calling code(s): 505, 679
 - Updated phone metadata for region code(s):
   BF, CI, EG, EH, FJ, IN, KI, MA, MT, NG, NI, SI, SN, SR, TT
 - Updated short number metadata for region code(s): KI
 - Updated geocoding data for country calling code(s):
   27 (en), 226 (en), 1 (en)
 - New carrier data for country calling code(s): 356 (en), 677 (en)
 - Updated carrier data for country calling code(s):
   212 (en), 221 (en), 225 (en), 226 (en), 234 (en), 597 (en), 1 (en)

Nov 12, 2013: libphonenumber-5.9
* Code changes:
 - Adding support for numbers with multiple Italian leading zeros, by adding a field
   to the phone number proto to allow an arbitrary number of leading zeros, and
   supporting this when parsing, validating and formatting.
 - Adding more functionality to ShortNumberInfo -> such as getExpectedCostForRegion.
 - Fix for parsing short numbers that start with the national prefix.
 - Updating formatNumberForMobileDialing to work with short numbers.
 - Stop finding Israeli 4-digit "star" numbers in text when no star is in fact present.
 - Bug fix for finding phone numbers where the area code was also part of the country
   calling code.

* Metadata changes:
 - Updated phone metadata for region code(s):
   AU, BQ, BY, CI, CO, CW, GN, HN, IN, JO, KI, KW, MG, MK, MM, NA, PK, TC, TM,
   UG
 - New short number metadata for region code(s): CD, GN
 - Updated short number metadata for region code(s):
   AF, AG, AI, AM, AR, AS, AW, AZ, BD, BH, BI, BM, BO, BQ, BT, BW, BY, CA, CH,
   CI, CM, CO, CW, DZ, FJ, GD, GE, GH, GT, GY, HN, HT, ID, IE, IM, IN, IQ, JM,
   JO, KE, KG, KH, KI, KW, KZ, LR, SV
 - New geocoding data for country calling code(s):
   257 (en), 389 (en), 599 (en), 686 (en), 962 (en)
 - Updated geocoding data for country calling code(s):
   264 (en), 375 (be, en, ru)
 - New carrier data for country calling code(s):
   375 (be, ru), 389 (en), 599 (en), 965 (ar)